[package]
name = "zk-square-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = { version = "0.4.0", features = ["std"] }
ark-groth16 = { version = "0.4.0", features = ["std"] }
ark-ff = { version = "0.4.0", features = ["std"] }
ark-r1cs-std = { version = "0.4.0", features = ["std"] }
ark-relations = { version = "0.4.0", features = ["std"] }
ark-snark = "0.4.0"
ark-std = { version = "0.4.0", features = ["std"] }
rand = { version = "0.8.5", features = ["std", "std_rng"] } 